# BigInteger

./: .gitignore  CMakeLists.txt
include/: BigInteger.hpp
scripts/cmake/: build.sh
src/: Atomic.cpp  BigInteger.cpp
test/: test_BigInteger.cpp
